src/tests/errors/syntax/010.ura
// parse_errors/018 — `array` type missing closing `]`
use "@/header"

main():
    arr array[int = stack[int](3)
    arr[0] = 1